# Advantage20

./: .gitignore  DEV.md  LICENSE  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_world_slug.py
backend/backend/: settings.py  urls.py
frontend/: .prettierignore  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  routes.ts
frontend/src/api/A20/: authentication.ts  index.ts
frontend/src/assets/: index.css
frontend/src/components/ui/button/: Button.vue
frontend/src/directives/: ripple.ts
frontend/src/layouts/: AuthenticatedLayout.vue
frontend/src/pages/: About.vue  Allusia.vue  Home.vue  Login.vue
frontend/src/pages/worlds/: CreateWorld.vue  ViewWorld.vue
frontend/src/themes/: default.ts
